--- a/patient-management/patient-service/src/main/resources/application.properties
+++ b/patient-management/patient-service/src/main/resources/application.properties
@@ -11,3 +11,6 @@ server.port=4000
 
 ## logging level
 logging.level.root=info
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.ByteArraySerializer
