--- a/patient-management/api-gateway/src/main/resources/application.yml
+++ b/patient-management/api-gateway/src/main/resources/application.yml
@@ -6,12 +6,29 @@ spring:
   cloud:
     gateway:
       routes:
+          - id: auth-service-route
+            uri:
+              http://auth-service:4005
+            predicates:
+              - Path=/auth/**
+            filters:
+              - StripPrefix=1
+
+          - id : api-docs-auth-route
+            uri:
+              http://auth-service:4005
+            predicates:
+              - Path=/api-docs/auth
+            filters:
+              - RewritePath=/api-docs/auth,/v3/api-docs
+
           - id: patient-service-route
             uri: http://patient-service:4000
             predicates:
               - Path=/api/patients/**
             filters:
               - StripPrefix=1
+              - JwtValidation
 
 
           - id: api-docs-patient-route
